--- a/src/Notes/Math/Pre-Calculus/AGAA/09_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_02.html
@@ -119,7 +119,7 @@ Given \(\cos (-x) = \cos x\) and \(\sin -x = - \sin x\), then:
 </p>
 
 \begin{align}
-= \cos A \cos B - \sin A \sin -B
+= \cos A \cos B - \sin A \sin B
 \end{align}
 
 <div id="Sum and Difference Identities-Sine and Tangent Sum and Difference Identities"><h2 id="Sine and Tangent Sum and Difference Identities" class="header"><a href="#Sum and Difference Identities-Sine and Tangent Sum and Difference Identities">Sine and Tangent Sum and Difference Identities</a></h2></div>
