Improve TOC generation [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/02.html
+++ b/src/Notes/ComputerScience/CG/RTGW/02.html
@@ -41,20 +41,19 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="02.html#WebGL Rendering Pipeline">WebGL Rendering Pipeline</a>
-
-<ul>
-<li>
-<a href="02.html#Vertex Buffer Objects (VBOs)">Vertex Buffer Objects (VBOs)</a>
+<a href="02.html#WebGL%20Rendering%20Pipeline">WebGL Rendering Pipeline</a>
 
 </li><li>
-<a href="02.html#Index Buffer Objects (IBOs)">Index Buffer Objects (IBOs)</a>
+<a href="02.html#Vertex%20Buffer%20Objects%20%28VBOs%29">Vertex Buffer Objects  VBOs</a>
 
 </li><li>
-<a href="02.html#Vertex Shader">Vertex Shader</a>
+<a href="02.html#Index%20Buffer%20Objects%20%28IBOs%29">Index Buffer Objects  IBOs</a>
 
 </li><li>
-<a href="02.html#Fragment Shader">Fragment Shader</a>
+<a href="02.html#Vertex%20Shader">Vertex Shader</a>
+
+</li><li>
+<a href="02.html#Fragment%20Shader">Fragment Shader</a>
 
 </li><li>
 <a href="02.html#Framebuffer">Framebuffer</a>
@@ -71,48 +70,41 @@
 </li><li>
 <a href="02.html#Varyings">Varyings</a>
 
-</li></ul>
 </li><li>
-<a href="02.html#Rendering in WebGL">Rendering in WebGL</a>
-
-<ul>
-<li>
-<a href="02.html#Defining a Geometry Using JavaScript Arrays">Defining a Geometry Using JavaScript Arrays</a>
+<a href="02.html#Rendering%20in%20WebGL">Rendering in WebGL</a>
 
 </li><li>
-<a href="02.html#Creating WebGL Buffers">Creating WebGL Buffers</a>
+<a href="02.html#Defining%20a%20Geometry%20Using%20JavaScript%20Arrays">Defining a Geometry Using JavaScript Arrays</a>
 
 </li><li>
-<a href="02.html#Associating Attributes to VBOs">Associating Attributes to VBOs</a>
+<a href="02.html#Creating%20WebGL%20Buffers">Creating WebGL Buffers</a>
 
-</li></ul>
+</li><li>
+<a href="02.html#Associating%20Attributes%20to%20VBOs">Associating Attributes to VBOs</a>
+
 </li><li>
 <a href="02.html#Rendering">Rendering</a>
 
-<ul>
-<li>
-<a href="02.html#Drawing Functions">Drawing Functions</a>
-
-<ul>
-<li>
-[[#Using <code>drawArrays</code>|Using <code>drawArrays</code>]]
+</li><li>
+<a href="02.html#Drawing%20Functions">Drawing Functions</a>
 
 </li><li>
-[[#Using <code>drawElements</code>|Using <code>drawElements</code>]]
-
-</li></ul>
-</li></ul>
-</li><li>
-<a href="02.html#Rendering a Square">Rendering a Square</a>
+<a href="02.html#Using%20%60drawArrays%60">Using  drawArrays</a>
 
 </li><li>
-<a href="02.html#Vertex Array Objects">Vertex Array Objects</a>
+<a href="02.html#Using%20%60drawElements%60">Using  drawElements</a>
 
 </li><li>
-[[#<code>drawElements</code> Modes|<code>drawElements</code> Modes]]
+<a href="02.html#Rendering%20a%20Square">Rendering a Square</a>
 
 </li><li>
-<a href="02.html#WebGL as a State Machine: Buffer Manipulation">WebGL as a State Machine: Buffer Manipulation</a>
+<a href="02.html#Vertex%20Array%20Objects">Vertex Array Objects</a>
+
+</li><li>
+<a href="02.html#%60drawElements%60%20Modes">drawElements  Modes</a>
+
+</li><li>
+<a href="02.html#WebGL%20as%20a%20State%20Machine%3A%20Buffer%20Manipulation">WebGL as a State Machine  Buffer Manipulation</a>
 
 </li></ul>
 <hr>
