--- a/src/Notes/ComputerScience/WebDev/Docker/cmd_vs_entrypoint.html
+++ b/src/Notes/ComputerScience/WebDev/Docker/cmd_vs_entrypoint.html
@@ -36,6 +36,22 @@
 
 <div id="`CMD` vs `ENTRYPOINT`"><h1 id="`CMD` vs `ENTRYPOINT`" class="header"><a href="#`CMD` vs `ENTRYPOINT`"><code>CMD</code> vs <code>ENTRYPOINT</code></a></h1></div>
 
+<hr>
+
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="cmd_vs_entrypoint.html#%60CMD%60">CMD</a>
+
+</li><li>
+<a href="cmd_vs_entrypoint.html#%60ENTRYPOINT%60">ENTRYPOINT</a>
+
+</li><li>
+<a href="cmd_vs_entrypoint.html#Difference">Difference</a>
+
+</li></ul>
+<hr>
+
 <div id="`CMD` vs `ENTRYPOINT`-`CMD`"><h2 id="`CMD`" class="header"><a href="#`CMD` vs `ENTRYPOINT`-`CMD`"><code>CMD</code></a></h2></div>
 
 <p>
@@ -133,20 +149,6 @@ $ docker run ubuntu-sleeper 10
 <p>
 The argument <code>10</code> is passed and appended to the <code>ENTRYPOINT</code> command.
 </p>
-
-<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
-<ul>
-<li>
-[[#<code>CMD</code>|<code>CMD</code>]]
-
-</li><li>
-[[#<code>ENTRYPOINT</code>|<code>ENTRYPOINT</code>]]
-
-</li><li>
-<a href="cmd_vs_entrypoint.html#Difference">Difference</a>
-
-</li></ul>
-<hr>
 </div>
   
 
