--- a/src/Notes/ComputerScience/WebDev/Docker/images_commands.html
+++ b/src/Notes/ComputerScience/WebDev/Docker/images_commands.html
@@ -50,16 +50,14 @@
 <a href="images_commands.html#DOWNLOAD">DOWNLOAD</a>
 
 </li><li>
-<a href="images_commands.html#Create your own image">Create your own image</a>
-
-<ul>
-<li>
-[[#<code>Dockerfile</code>|<code>Dockerfile</code>]]
+<a href="images_commands.html#Create%20your%20own%20image">Create your own image</a>
 
 </li><li>
-<a href="images_commands.html#Layered architecture">Layered architecture</a>
+<a href="images_commands.html#%60Dockerfile%60">Dockerfile</a>
 
-</li></ul>
+</li><li>
+<a href="images_commands.html#Layered%20architecture">Layered architecture</a>
+
 </li></ul>
 <hr>
 
