--- a/src/Notes/ComputerScience/WebDev/Docker/nerworking.html
+++ b/src/Notes/ComputerScience/WebDev/Docker/nerworking.html
@@ -41,24 +41,24 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-[[#<code>Bridge</code>|<code>Bridge</code>]]
+<a href="nerworking.html#%60Bridge%60">Bridge</a>
 
 </li><li>
-[[#<code>host</code>|<code>host</code>]]
+<a href="nerworking.html#%60host%60">host</a>
+
+</li><li>
+<a href="nerworking.html#%60none%60">none</a>
+
+</li><li>
+<a href="nerworking.html#User%20defined%20networks">User defined networks</a>
+
+</li><li>
+<a href="nerworking.html#Inspect%20network">Inspect network</a>
+
+</li><li>
+<a href="nerworking.html#Embedded%20DNS">Embedded DNS</a>
 
 </li></ul>
-<li>
-[[#<code>none</code>|<code>none</code>]]
-
-</li><li>
-<a href="nerworking.html#User defined networks">User defined networks</a>
-
-</li><li>
-<a href="nerworking.html#Inspect network">Inspect network</a>
-
-</li><li>
-<a href="nerworking.html#Embedded DNS">Embedded DNS</a>
-
 <hr>
 
 <p>
@@ -195,7 +195,7 @@ When containers in the same subnet may want to access each other, for that you c
 <p>
 Because of that all containers in a <code>Docker</code> host can resolve each other using their names. This is possible has a built-in DNS server for this purpose that runs at <code>172.0.0.11</code>.
 </p>
-</li></div>
+</div>
   
 
 <script type="text/javascript" src="https://albamr09.github.io/src/lib/highlight.min.js" id="js_highlight" data-description="Support sytax highlighting on code"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/zepto.min.js" id="zepto" data-description="Library to perform search"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/flexsearch.bundle.js" id="flexsearch" data-description="Library to perform search"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/search.js" id="search" data-description="Library to perform search"></script><script type="text/javascript" id="search" data-description="Entrypoint for hightlihgting">
