--- a/src/Notes/ComputerScience/WebDev/NodeJS/env.html
+++ b/src/Notes/ComputerScience/WebDev/NodeJS/env.html
@@ -49,11 +49,9 @@
 </li><li>
 <a href="env.html#File">File</a>
 
-<ul>
-<li>
-[[#<code>dotenv</code>|<code>dotenv</code>]]
+</li><li>
+<a href="env.html#%60dotenv%60">dotenv</a>
 
-</li></ul>
 </li></ul>
 <hr>
 
