--- a/src/Notes/ComputerScience/WebDev/NodeJS/mock_mongo.html
+++ b/src/Notes/ComputerScience/WebDev/NodeJS/mock_mongo.html
@@ -41,16 +41,16 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-[[#<code>MongoMemoryServer</code>|<code>MongoMemoryServer</code>]]
+<a href="mock_mongo.html#%60MongoMemoryServer%60">MongoMemoryServer</a>
 
 </li><li>
-[[#<code>Docker</code>|<code>Docker</code>]]
+<a href="mock_mongo.html#%60Docker%60">Docker</a>
 
 </li><li>
-[[#<code>MongoMemoryServer</code> Configuration|<code>MongoMemoryServer</code> Configuration]]
+<a href="mock_mongo.html#%60MongoMemoryServer%60%20Configuration">MongoMemoryServer  Configuration</a>
 
 </li><li>
-<a href="mock_mongo.html#Example of Usage">Example of Usage</a>
+<a href="mock_mongo.html#Example%20of%20Usage">Example of Usage</a>
 
 </li></ul>
 <hr>
