--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T2/07_weakly_informative_priors.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T2/07_weakly_informative_priors.html
@@ -41,38 +41,34 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="07_weakly_informative_priors.html#Concepts relating to the choice of prior distribution">Concepts relating to the choice of prior distribution</a>
+<a href="07_weakly_informative_priors.html#Concepts%20relating%20to%20the%20choice%20of%20prior%20distribution">Concepts relating to the choice of prior distribution</a>
 
-<ul>
-<li>
-<a href="07_weakly_informative_priors.html#Improper limit of a prior distribution">Improper limit of a prior distribution</a>
+</li><li>
+<a href="07_weakly_informative_priors.html#Improper%20limit%20of%20a%20prior%20distribution">Improper limit of a prior distribution</a>
 
 </li><li>
 <a href="07_weakly_informative_priors.html#Calibration">Calibration</a>
 
-</li></ul>
 </li><li>
-<a href="07_weakly_informative_priors.html#Classes of noninformative and weakly informative prior distributions for hierarchical variance parameters">Classes of noninformative and weakly informative prior distributions for hierarchical variance parameters</a>
-
-<ul>
-<li>
-<a href="07_weakly_informative_priors.html#General considerations">General considerations</a>
+<a href="07_weakly_informative_priors.html#Classes%20of%20noninformative%20and%20weakly%20informative%20prior%20distributions%20for%20hierarchical%20variance%20parameters">Classes of noninformative and weakly informative prior distributions for hierarchical variance parameters</a>
 
 </li><li>
-<a href="07_weakly_informative_priors.html#Uniform prior distributions">Uniform prior distributions</a>
+<a href="07_weakly_informative_priors.html#General%20considerations">General considerations</a>
 
 </li><li>
-[[#Inverse-gamma\((psilon, psilon)\) prior distributions|Inverse-gamma\((psilon, psilon)\) prior distributions]]
+<a href="07_weakly_informative_priors.html#Uniform%20prior%20distributions">Uniform prior distributions</a>
 
 </li><li>
-<a href="07_weakly_informative_priors.html#Half-Cauchy prior distributions">Half-Cauchy prior distributions</a>
-
-</li></ul>
-</li><li>
-<a href="07_weakly_informative_priors.html#Application to the 8-schools example">Application to the 8-schools example</a>
+<a href="07_weakly_informative_priors.html#Inverse-gamma%24%28%5Cepsilon%2C%20%5Cepsilon%29%24%20prior%20distributions">Inverse-gamma   epsilon   epsilon   prior distributions</a>
 
 </li><li>
-<a href="07_weakly_informative_priors.html#Application for the 3-schools problem">Application for the 3-schools problem</a>
+<a href="07_weakly_informative_priors.html#Half-Cauchy%20prior%20distributions">Half-Cauchy prior distributions</a>
+
+</li><li>
+<a href="07_weakly_informative_priors.html#Application%20to%20the%208-schools%20example">Application to the 8-schools example</a>
+
+</li><li>
+<a href="07_weakly_informative_priors.html#Application%20for%20the%203-schools%20problem">Application for the 3-schools problem</a>
 
 </li></ul>
 <hr>
